AJout de la connexion et de la deconnexion

--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -38,7 +38,9 @@
         <img src="../assets/logos/femme.png" alt="Logo Utilisateur" />
         <p>Bienvenue sur ta page d'<strong>Utilisateur</strong> !</p>
       </header>
-      <!-- Le reste de la structure existante -->
+      <h1>Il n'y a pas grand chose par ici, à part la déconnexion</h1>
+      <img src="../assets/logos/fleche.png" alt="" />
+      <button class="btnDeconnexion">Déconnexion</button>
     </div>
 
     <div class="menu">
