--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/menu.css" />
     <link rel="stylesheet" href="/styles/style.css" />
+    <script type="module" src="/data/firebase.js"></script>
     <title>Accueil</title>
   </head>
   <body>
@@ -27,10 +28,10 @@
       </section>
       <div class="menu">
         <a href="/index.html" class="btn-home active">
-          <img src="../assets/logos/home active.png" alt="Accueil" />
+          <img src="/assets/logos/home.png" alt="Accueil" />
         </a>
         <a href="./pages/accountPage.html" class="btn-account">
-          <img src="../assets/logos/compte.png" alt="Comptes Bancaires" />
+          <img src="/assets/logos/compte.png" alt="Comptes Bancaires" />
         </a>
         <a class="btn-add add-active">
           <img src="/assets/logos/add.png" alt="Ajouter" />
