--- a/pages/enveloppePage.html
+++ b/pages/enveloppePage.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/styles/enveloppePage.css" />
     <link rel="stylesheet" href="/styles/menu.css" />
     <link rel="stylesheet" href="/styles/enveloppe.css" />
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+    <script
+      type="module"
+      src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"
+    ></script>
+    <script></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -50,6 +57,7 @@
         </a>
       </div>
     </main>
-    <script src="/script/enveloppe.js"></script>
+    <script type="module" src="/data/firebase.js"></script>
+    <script type="module" src="/script/enveloppe.js"></script>
   </body>
 </html>
