--- a/pages/userPage.html
+++ b/pages/userPage.html
@@ -17,8 +17,8 @@
       <h2>Connectez-vous...</h2>
 
       <form action="/login" method="post" id="formConnexion">
-        <input type="text" name="emailConnexion" placeholder="Nom d'utilisateur" required />
-        <input type="password" name="passwordConnexion" placeholder="Mot de passe" required />
+        <input type="text" id="emailConnexion" placeholder="Email" required />
+        <input type="password" id="passwordConnexion" placeholder="Mot de passe" required />
         <button type="submit">Se connecter</button>
       </form>
     </div>
