--- a/pages/enveloppePage.html
+++ b/pages/enveloppePage.html
@@ -29,7 +29,7 @@
     </header>
     <span class="total-envelope">
       <p>Total enveloppes</p>
-      <p class="money">9 000 €</p>
+      <p class="money">0 €</p>
     </span>
     <main class="main">
       <div class="main-header">
