Ajout de la base du site, enveloppes et comptes opérationnel. A voir plus tard pour ajouter les fonctionnalités

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <main class="main">
       <section class="accounts">
         <h2>Mes Comptes</h2>
-        <!-- Liste des comptes ici -->
+        <div class="gallery-comptes"></div>
       </section>
       <section class="envelopes">
         <h2>Mes Enveloppes</h2>
-        <div class="gallery"></div>
+        <div class="gallery-enveloppes"></div>
       </section>
       <div class="menu">
         <a href="/index.html" class="btn-home active">
