MAJ du css de index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="./pages/accountPage.html" class="btn-account">
           <img src="/assets/logos/compte.png" alt="Comptes Bancaires" />
         </a>
-        <a class="btn-add add-active">
+        <a class="btn-add add-inactive">
           <img src="/assets/logos/add.png" alt="Ajouter" />
         </a>
         <a href="./pages/enveloppePage.html" class="btn-envelope">
